[metadata]
name = repoinsight
summary = Gain insights into the status and history of open source project.
description-file =
    README.md
long_description_content_type = text/markdown
author = Yikun
home-page = https://github.com/yikun/repoinsight
python-requires = >=3.6
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[pbr]
warnerrors = True

[files]
packages =
    repoinsight

[entry_points]
console_scripts =
    repoinsight = repoinsight.cli:cli

[wheel]
universal = 1
